--- a/src/unitec_proyecto_geometria/ProyectoGeometria.form
+++ b/src/unitec_proyecto_geometria/ProyectoGeometria.form
@@ -58,10 +58,10 @@
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="etiquetaResultado" min="-2" pref="278" max="-2" attributes="0"/>
+                          <Component id="etiquetaResultado" min="-2" pref="566" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="112" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
